[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/UI/Menu/NavigationButtons.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/UI/Menu/MenuOptions.gd" type="Script" id=2]
[ext_resource path="res://src/UI/Menu/MenuButtonOptionsInt.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UI/Menu/MenuButtonOptionsBool.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UI/res/menu_font_big.tres" type="DynamicFont" id=7]

[node name="MenuOptions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.392157 )
anchor_top = 0.178
anchor_right = 1.0
anchor_bottom = 0.267
margin_top = -0.160004
margin_bottom = -0.240021
custom_fonts/font = ExtResource( 7 )
text = "OPTIONS"
align = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.25
anchor_top = 0.3
anchor_right = 0.75
anchor_bottom = 0.7
alignment = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Labels" parent="Buttons" instance=ExtResource( 5 )]
margin_right = 640.0
text = "Labels"
value = true

[node name="P1KeyboardSpeed" parent="Buttons" instance=ExtResource( 4 )]
margin_top = 52.0
margin_right = 640.0
margin_bottom = 100.0
text = "P1 Keyboard Speed"
value = 5
value_min = 1

[node name="P2KeyboardSpeed" parent="Buttons" instance=ExtResource( 4 )]
margin_top = 104.0
margin_right = 640.0
margin_bottom = 152.0
text = "P2 Keyboard Speed"
value = 5
value_min = 1

[node name="Fullscreen" parent="Buttons" instance=ExtResource( 5 )]
margin_top = 156.0
margin_right = 640.0
margin_bottom = 204.0
text = "Fullscreen"

[node name="VSync" parent="Buttons" instance=ExtResource( 5 )]
margin_top = 208.0
margin_right = 640.0
margin_bottom = 256.0
text = "VSync"
value = true

[node name="ScreenShake" parent="Buttons" instance=ExtResource( 5 )]
margin_top = 260.0
margin_right = 640.0
margin_bottom = 308.0
text = "Screen Shake"
value = true

[node name="SFXVolume" parent="Buttons" instance=ExtResource( 4 )]
margin_top = 312.0
margin_right = 640.0
margin_bottom = 360.0
text = "Sound"
value = 10

[node name="NavigationButtons" parent="." instance=ExtResource( 1 )]
